@@ -1,5 +1,11 @@
 2002-08-20  Zbigniew Chyla  <cyba@gnome.pl>
 
+	* py-console.c
+	#include <stdlib.h>
+	(app_cline_entered) s/stdout/stdout_str/, s/stderr/stderr_str/
+
+2002-08-20  Zbigniew Chyla  <cyba@gnome.pl>
+
 	* Makefile.am
 	(INCLUDES): Define PLUGIN_ID
 	(gnumeric_plugin_python_loader_DATA):
